test/libsolidity/syntaxTests/freeFunctions/free_function_qualified_modifier.sol
contract C {
  modifier someModifier() { _; }
}

function fun() C.someModifier {

}
// ----
// ParserError 2314: (65-66): Expected '{' but got '.'
